--- a/css/style.css
+++ b/css/style.css
@@ -139,6 +139,11 @@ ul {
 }
 
 /* Header */
+.header-container {
+  display: flex;
+  align-items: center;
+  flex-grow: 1;
+}
 
 /* Hero section*/
 .hero-section {
